fixed text wrapping on listing page and home page

--- a/react-app/src/components/Listings/ListingsIndex/ListingIndex.css
+++ b/react-app/src/components/Listings/ListingsIndex/ListingIndex.css
@@ -31,6 +31,8 @@
 .home-page-description {
   margin-top: 10px;
   width: 75%;
+  word-wrap: break-word;
+  flex-wrap: wrap;
 }
 
 .read-more-button {
